fixes 'about us' wrapping issue

--- a/css/index.css
+++ b/css/index.css
@@ -172,9 +172,12 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  white-space: nowrap;
 }
 a {
   text-decoration: none;
+  padding: 0px 5%;
+  font-size: 1.6rem;
 }
 .footer {
   width: 100%;
@@ -188,6 +191,7 @@ a {
   padding: 20px;
 }
 .home header {
+  margin: 30px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
