--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,6 @@
 .home {
 header{
+  margin: 30px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
