--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,8 +3,11 @@ nav{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  white-space: nowrap;
 }
 
 a{
   text-decoration: none;
+  padding: 0px 5%;
+  font-size: 1.6rem;
 }
